# BasicJPEG

./: CMakeLists.txt  init.bat  init.sh
include/: bmp.h  jpeg.h
samples/: sources.txt
src/: CMakeLists.txt  bmp.cpp  jpeg.cpp  main.cpp
test/: CMakeLists.txt  test_bmp.cpp  test_jpeg.cpp
